@@ -1,3 +1,14 @@
+1999-11-04  Tom Tromey  <tromey@cygnus.com>
+
+	* configure: Rebuilt.
+	* configure.in: Removed qt threads case.
+	* dyn_load.c: Don't mention QUICK_THREADS.
+	* os_dep.c: Don't mention QUICK_THREADS.
+	* misc.c: Don't mention QUICK_THREADS.
+	* gcconfig.h: Don't mention QUICK_THREADS.
+	* gc_priv.h: Removed QUICK_THREADS code.
+	* quick_threads.c: Removed.
+
 1999-11-03  Tom Tromey  <tromey@cygnus.com>
 
 	* gcconfig.h: Merged in local changes from old config.h.
